--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
+    <link href="/dist/output.css" rel="stylesheet" />
+
     <title>Mevuun</title>
   </head>
   <body>
